--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -18,7 +18,7 @@
     <!-- Header Section -->
     <header class="header" >
       <div class="user-info">
-        <img src="../Assets/Profile pic.jpeg" alt="Profile Image" class="profile-img">
+        <img src="../Assets/profile pic.jpg" alt="Profile Image" class="profile-img">
         <div>
           <p class="welcome-text">Welcome back,</p>
           <h2 class="user-name"></h2>
