--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -18,7 +18,7 @@
         </header>
         <!-- Profile Info -->
         <div class="profile-info">
-          <img src="../Assets/Profile pic.jpeg" alt="Profile Picture" class="profile-picture">
+          <img src="../Assets/profile pic.jpg" alt="Profile Picture" class="profile-picture">
           <h2 class="name"></h2>
           <p class="phone-number">+2347010000001</p>
       </div>
@@ -29,7 +29,7 @@
         <div class="data-item">
             <i class="fa-solid fa-user"></i>
             <div class="data-content">
-                <span class="value">Jacob Jones</span>
+                <span id="value" class="inner-name"></span>
                 <span class="label">Full name</span>
             </div>
         </div>
@@ -43,7 +43,7 @@
         <div class="data-item">
             <i class="fa-solid fa-envelope"></i>
             <div class="data-content">
-              <span class="value">jacobjones@gmail.com</span>
+              <span class="value">xxxxxx****@gmail.com</span>
               <span class="label">Email</span>    
             </div>
         </div>
