--- a/convert.html
+++ b/convert.html
@@ -15,7 +15,7 @@
 <body onload="checkSessionAndRedirect()">
   <div class="icon">
     <ul class="icon-logo">
-      <li class="mtn" id="mtnButton"><input type="#" class="logo" value="MTN"><img src="./image/128px-New-mtn-logo.jpg"
+      <li class="mtn" id="mtnButton"><input type="#" class="logo" value="MTN"><img src="./image/mtn.png"
           alt=""></li>
       <li class="glo" id="gloButton"><input type="text" class="logo glo" value="GLO"><img src="./image/gloimg.png"
           alt=""></li>
@@ -26,7 +26,7 @@
     <form class="form-input" id="convert">
       <div id="msg"></div>
       <!-- Receiving Number -->
-      <input type="text" name="receiving_number" id="receiverPhone" placeholder="Receiving Number" disabled>
+      <input type="text"  name="receiving_number" id="receiverPhone" placeholder="Receiving Number" disabled>
       <!-- Network -->
       <input type="text" id="network" placeholder="Network" disabled>
       <!-- Sender Phone -->
