--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -18,7 +18,7 @@
     <!-- Header Section -->
     <header class="header" >
       <div class="user-info">
-        <img src="../Assets/profile pic.jpg" alt="Profile Image" class="profile-img">
+       <a href="./Profile.html"> <img src="../Assets/profile pic.jpg" alt="Profile Image" class="profile-img"></a>
         <div>
           <p class="welcome-text">Welcome back,</p>
           <h2 class="user-name"></h2>
@@ -147,7 +147,7 @@
           <i class="fa-solid fa-user"></i>
           <span>Profile</span>
         </a>
-        <a href="../start.html" onclick="logout()" style="color: red;" class="footer-link signout">
+        <a href="#" onclick="logout()" style="color: red;" class="footer-link signout">
           <i class="fa fa-sign-out" aria-hidden="true"></i>
           <span>Sign Out</span>
         </a>
