--- a/Pages/Air2Cash.html
+++ b/Pages/Air2Cash.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../Styles/Air2Cash.css">
 </head>
-<body>
+<body onload="checkSessionAndRedirect()">
 
 <!-- Footer Section -->
   <footer class="footer">
@@ -41,6 +41,6 @@
     </nav>
   </footer>
   
-  <script src="../Scripts/Air2Cash.js"></script>
+  <script src="../Scripts/Air2Cash.js"></script>  
 </body>
 </html>
