--- a/convert.html
+++ b/convert.html
@@ -35,7 +35,7 @@
       <input type="text" id="amount" placeholder="Amount">
       <!-- Submit Button -->
       <div class="create-btn">
-        <button type="submit">Convert</button>
+        <button type="submit" class="signIn">Convert</button>
       </div>
     </form>
     <footer class="footer">
