--- a/Pages/Withdraw.html
+++ b/Pages/Withdraw.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Withdraw Page</title>
   <link rel="stylesheet" href="../Styles/Withdraw.css">
 </head>
-<body>
+
+
+
+<body onload="checkSessionAndRedirect()">
   <header>
     <nav class="navbar">
-        <div class="logo">
-            <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
-            <a href="./Home.html"><p>Air2Cash</p></a>
-        </div>
+
+      <div class="logo">
+        <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
+        <p>Air2Cash</p>
+      </div>
+
+      <div class="logo">
+        <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
+        <a href="./Home.html">
+          <p>Air2Cash</p>
+        </a>
+      </div>
+
       <ul class="nav-links">
-        <!-- <li><a href="./Home.html">Home</a></li> -->
-        <li><a href="./Deposit.html">Deposit</a></li>
-        <li><a href="./Withdraw.html" class="active">Withdraw</a></li>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="deposit.html">Deposit</a></li>
+        <li><a href="withdraw.html" class="active">Withdraw</a></li>
       </ul>
     </nav>
   </header>
@@ -33,8 +46,14 @@
         <input type="number" id="accountNumber" name="accountNumber" placeholder="Enter account number" required>
       </div>
       <div class="form-group">
-        <label for="bankName">Bank Name</label>
-        <input type="text" id="bankName" name="bankName" placeholder="Enter bank name" required>
+        <label for="bankDropdown">Select a Bank:</label>
+        <select id="bankDropdown">
+          <option value="">Select a Bank</option>
+        </select>
+        <label for="bankDropdown">Select a Bank:</label>
+        <select id="bankDropdown">
+          <option value="">Select a Bank</option>
+        </select>
       </div>
       <button type="submit" class="btn-submit">Withdraw</button>
     </form>
@@ -46,5 +65,227 @@
   </footer>
 
   <script src="../Scripts/Withdraw.js"></script>
+  <script src="../Scripts/jquery/jquery.js"></script>
+  <script src="../Scripts/sweetalert2/sweetalert2.all.min.js"></script>
+  <script src="../Scripts/session.js"></script>
+
+  <script>
+
+    $(document).ready(function () {
+      fetchAndPopulateBanks();
+    });
+
+    function fetchAndPopulateBanks() {
+      const selectElement = $('#bankDropdown');
+      selectElement.empty();
+      selectElement.append('<option value="">Select a Bank</option>'); // Add default option
+      const token = sessionStorage.getItem("token");
+
+      // Perform AJAX request to fetch bank data
+      $.ajax({
+        url: 'https://testing1-xpjd.onrender.com/api/users/fetchBank', // Replace with your actual API endpoint
+        type: 'GET',
+        dataType: 'json',
+        headers: {
+          'Authorization': `Bearer ${token}`
+        },
+        success: function (data) {
+          // Check if the response contains 'success' and that the data array is not empty
+          if (data.success && Array.isArray(data.data) && data.data.length > 0) {
+            data.data.forEach(row => {
+              const option = $('<option></option>') // Create a new <option> element
+                .val(row.bankname) // Use the bankcode as the value
+                .text(row.bankname); // Use the bankname as the displayed text
+              selectElement.append(option); // Append the <option> to the <select>
+            });
+          } else {
+            console.warn('No bank data found to populate the dropdown.');
+          }
+        },
+        error: function (xhr, status, error) {
+          console.error('Error fetching bank data:', error);
+        }
+      });
+    }
+
+
+    // Synchronize bank selection with account number
+    $(document).on('input', '#accountNumber', function () {
+      const bankCode = $(this).val();
+      const acct_number = $('#accountNumber').val();
+
+      // Trigger account number search when a bank is selected
+      if (bankCode && acct_number.length === 10) {
+        search_account_number();
+      }
+    });
+
+    // Function to search for account number
+    function search_account_number() {
+      const bankCode = $('#bankDropdown').val();  // Use the selected bank code
+      const acct_number = $('#accountNumber').val();  // Use the account number input value
+
+      // Show loading spinner and clear account name
+      $('.loading-spinner').show();
+      $('.acct_name').html('');
+
+      // Check if the account number has exactly 10 digits
+      if (acct_number.length === 10) {
+        fetch('check.php', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
+          body: 'bankCode=' + encodeURIComponent(bankCode) + '&acct_number=' + encodeURIComponent(acct_number)
+        })
+          .then(response => {
+            if (!response.ok) {
+              throw new Error('Network response was not ok');
+            }
+            return response.json();
+          })
+          .then(data => {
+            if (data.result === 'success' && data.data.status) {
+              // Accessing the account name from the response
+              const accountName = data.data.data.account_name;
+
+              // Displaying the account name
+              $('.loading-spinner').hide();
+              $('.acct_name').html(accountName);
+            } else {
+              $('.acct_name').html('Account not found');
+            }
+          })
+          .catch(error => {
+            console.error('Error processing request:', error);
+            $('#msg1').html('<span class="alert alert-danger">An error occurred during the request</span><br><br>');
+            setTimeout(() => {
+              $('#msg1').html('');
+            }, 5000);
+          }
+          );
+      } else if (acct_number.length < 1) {
+        // Clear if account number is empty
+        $('.loading-spinner').hide();
+        $('.acct_name').html('');
+      } else if (acct_number.length > 10) {
+        // Show error if account number is more than 10 digits
+        $('.loading-spinner').hide();
+        $('.acct_name').html('Account number must be 10 digits');
+      }
+    }
+  </script>
+  <script src="../Scripts/jquery/jquery.js"></script>
+  <script src="../Scripts/sweetalert2/sweetalert2.all.min.js"></script>
+  <script src="../Scripts/session.js"></script>
+
+  <script>
+
+    $(document).ready(function () {
+      fetchAndPopulateBanks();
+    });
+
+    function fetchAndPopulateBanks() {
+      const selectElement = $('#bankDropdown');
+      selectElement.empty();
+      selectElement.append('<option value="">Select a Bank</option>'); // Add default option
+      const token = sessionStorage.getItem("token");
+
+      // Perform AJAX request to fetch bank data
+      $.ajax({
+        url: 'https://testing1-xpjd.onrender.com/api/users/fetchBank', // Replace with your actual API endpoint
+        type: 'GET',
+        dataType: 'json',
+        headers: {
+          'Authorization': `Bearer ${token}`
+        },
+        success: function (data) {
+          // Check if the response contains 'success' and that the data array is not empty
+          if (data.success && Array.isArray(data.data) && data.data.length > 0) {
+            data.data.forEach(row => {
+              const option = $('<option></option>') // Create a new <option> element
+                .val(row.bankname) // Use the bankcode as the value
+                .text(row.bankname); // Use the bankname as the displayed text
+              selectElement.append(option); // Append the <option> to the <select>
+            });
+          } else {
+            console.warn('No bank data found to populate the dropdown.');
+          }
+        },
+        error: function (xhr, status, error) {
+          console.error('Error fetching bank data:', error);
+        }
+      });
+    }
+
+
+    // Synchronize bank selection with account number
+    $(document).on('input', '#accountNumber', function () {
+      const bankCode = $(this).val();
+      const acct_number = $('#accountNumber').val();
+
+      // Trigger account number search when a bank is selected
+      if (bankCode && acct_number.length === 10) {
+        search_account_number();
+      }
+    });
+
+    // Function to search for account number
+    function search_account_number() {
+      const bankCode = $('#bankDropdown').val();  // Use the selected bank code
+      const acct_number = $('#accountNumber').val();  // Use the account number input value
+
+      // Show loading spinner and clear account name
+      $('.loading-spinner').show();
+      $('.acct_name').html('');
+
+      // Check if the account number has exactly 10 digits
+      if (acct_number.length === 10) {
+        fetch('check.php', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+          },
+          body: 'bankCode=' + encodeURIComponent(bankCode) + '&acct_number=' + encodeURIComponent(acct_number)
+        })
+          .then(response => {
+            if (!response.ok) {
+              throw new Error('Network response was not ok');
+            }
+            return response.json();
+          })
+          .then(data => {
+            if (data.result === 'success' && data.data.status) {
+              // Accessing the account name from the response
+              const accountName = data.data.data.account_name;
+
+              // Displaying the account name
+              $('.loading-spinner').hide();
+              $('.acct_name').html(accountName);
+            } else {
+              $('.acct_name').html('Account not found');
+            }
+          })
+          .catch(error => {
+            console.error('Error processing request:', error);
+            $('#msg1').html('<span class="alert alert-danger">An error occurred during the request</span><br><br>');
+            setTimeout(() => {
+              $('#msg1').html('');
+            }, 5000);
+          }
+          );
+      } else if (acct_number.length < 1) {
+        // Clear if account number is empty
+        $('.loading-spinner').hide();
+        $('.acct_name').html('');
+      } else if (acct_number.length > 10) {
+        // Show error if account number is more than 10 digits
+        $('.loading-spinner').hide();
+        $('.acct_name').html('Account number must be 10 digits');
+      }
+    }
+  </script>
 </body>
+
+
 </html>
