--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -8,7 +8,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../Styles/Profile.css">
 </head>
-<body>
+<body onload="checkSessionAndRedirect()">
   <div class="profile-container">
         <!-- Header -->
         <header class="profile-header">
@@ -132,7 +132,6 @@
   <script src="../Scripts/Profile.js"></script>
   <script src="../Scripts/session.js"></script>
   <script src="../Scripts/jquery/jquery.js"></script>
-  <!-- <script src="../Scripts/Home.js"></script> -->
   <script src="../Scripts/sweetalert2/sweetalert2.all.min.js"></script>
 </body>
 </html>
