--- a/start.html
+++ b/start.html
@@ -30,10 +30,10 @@
           <p id="msg1"></p>
           <br>
           <div class="input-1">
-            <input type="text" placeholder="Enter your Mobile No./Email" class="email" id="email">
+            <input type="text" required placeholder="Enter your Mobile No./Email" class="email" id="email">
           </div>
           <div class="input-1">
-            <input type="password" placeholder="Input password" class="password" id="Password">
+            <input type="password" required placeholder="Input password" class="password" id="Password">
           </div>
 
           <div class="Remember-div">
